syntax = "proto3";

option csharp_namespace = "Contracts.Inventory";

service StockProtoService {
	rpc GetStock (GetStockRequest) returns	 (StockModel);
}

message GetStockRequest {
	string itemNo = 1;
}

message StockModel {
	int32 quantity = 1;
}